fixed wrong font color

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -219,6 +219,10 @@ section .team-members .project-lead p {
   font-size: 2.5rem;
   margin-top: 1%;
 }
+section .team-members .project-lead p:hover {
+  background-color: none;
+  color: darkred;
+}
 section .team-members img {
   border-radius: 50%;
 }
@@ -230,6 +234,9 @@ section .team-members h2 {
 }
 section .team-members .project-lead {
   text-align: center;
+}
+section a {
+  color: black;
 }
 section .helpers {
   display: flex;
@@ -249,6 +256,10 @@ section .helpers h3 {
 section .helpers p {
   font-size: 2.5rem;
   margin-top: 1%;
+}
+section .helpers p:hover {
+  background-color: none;
+  color: darkred;
 }
 section .helpers .web-ui-developer,
 section .helpers .web-react-i,
